--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,7 +177,7 @@
     <!--PfourMainBodyFragment-->
     <string name="PfourIntroduction">4/4就職ご希望</string>
     <string name="expectedPosition">希望業種</string>
-    <string name="expectedPositionHint">PHPエンジニア</string>
+    <string name="expectedPositionHint">医師</string>
     <string name="remuneration">希望給料</string>
     <string name="remunerationHint">60万-80万</string>
     <string name="desiredIndustry">仕事タイプ</string>
@@ -186,19 +186,19 @@
     <string name="employmentFormHint">企業が直任する</string>
     <string name="headHunting">ヘッドハンティング推薦</string>
     <string name="workAddress">希望の勤務地</string>
-    <string name="workAddressHint">東京都 | 大阪府</string>
+    <string name="workAddressHint">東京都 | 港区</string>
     <string name="advantage">個人アピール</string>
     <string name="advantageHint">簡単な記述可能,在個人履歴で編集可能!</string>
     <string name="hourly">時給</string>
     <string name="daySalary">日給</string>
     <string name="monthSalary">月給</string>
     <string name="yearSalary">年収</string>
-    <string name="startHourly">10K</string>
+    <string name="startHourly">300</string>
     <string name="threeThousand">30K</string>
     <string name="fourThousand">40k</string>
     <string name="fiveThousand">50k</string>
     <string name="sixThousand">60k</string>
-    <string name="endHourly">20K</string>
+    <string name="endHourly">600</string>
     <string name="fullTime">フルタイム</string>
     <string name="partTime">パートタイム</string>
     <string name="overseas">海外採用を受ける</string>
